--- a/Obi/Obi/Dialogs/PhraseProperties.resx
+++ b/Obi/Obi/Dialogs/PhraseProperties.resx
@@ -603,11 +603,14 @@
   <data name="m_comboCustomClassName.AccessibleName" xml:space="preserve">
     <value>Select or type Custom class name:</value>
   </data>
+  <data name="m_comboCustomClassName.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
+    <value>Flat</value>
+  </data>
   <data name="m_comboCustomClassName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>149, 257</value>
+    <value>148, 256</value>
   </data>
   <data name="m_comboCustomClassName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>121, 24</value>
+    <value>367, 24</value>
   </data>
   <data name="m_comboCustomClassName.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
