--- a/trunk/Obi/Obi/ProjectView/TransportBar.resx
+++ b/trunk/Obi/Obi/ProjectView/TransportBar.resx
@@ -420,7 +420,7 @@
         +Kb0f0ngX8ywynVer4lVAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="mCustomClassMarkButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="mToDo_CustomClassMarkButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAABpFJREFUWEetl3lM
