--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -371,11 +371,11 @@ Oh well.</value>
     <comment>Preferences</comment>
   </data>
   <data name="really_use_directory_caption" xml:space="preserve">
-    <value>Non-empty new project directory</value>
+    <value>Empty directory before using it?</value>
     <comment>Error dialog</comment>
   </data>
   <data name="really_use_directory_text" xml:space="preserve">
-    <value>Directory "{0}"is not empty. If you create a new project in this directory, some contents may be overwritten. Do you wish to continue?</value>
+    <value>Directory "{0}"is not empty. If you want to empty this directory before using it, choose "Yes." If you want to use this directory as is, choose "No." If you do not want to use this directory, press "Cancel."</value>
     <comment>Error dialog</comment>
   </data>
   <data name="cannot_redo" xml:space="preserve">
@@ -1211,12 +1211,6 @@ Error text: {1}</value>
   <data name="Pipeline_InvalidString" xml:space="preserve">
     <value>invalid input</value>
   </data>
-  <data name="cannot_use_directory" xml:space="preserve">
-    <value>Cannot use directory "{0}" for saving or exporting: {1}</value>
-  </data>
-  <data name="cannot_use_directory_caption" xml:space="preserve">
-    <value>Cannot use directory</value>
-  </data>
   <data name="save_as_new_directory_name" xml:space="preserve">
     <value>{0} copy</value>
     <comment>Default new name for copy</comment>
@@ -1238,5 +1232,13 @@ Error text: {1}</value>
   </data>
   <data name="save_as_failed_caption" xml:space="preserve">
     <value>Failed to save</value>
+  </data>
+  <data name="cannot_empty_directory" xml:space="preserve">
+    <value>Cannot empty directory "{0}": {1}</value>
+    <comment>Error dialog text</comment>
+  </data>
+  <data name="cannot_empty_directory_caption" xml:space="preserve">
+    <value>Cannot empty directory</value>
+    <comment>Error dialog caption</comment>
   </data>
 </root>
