--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -1047,7 +1047,8 @@ Error text: {1}</value>
     <value>DTB validation error</value>
   </data>
   <data name="no_script" xml:space="preserve">
-    <value>no script file found at "{0}".</value>
+    <value>No script file found at "{0}".</value>
+    <comment>Pipeline interface error message</comment>
   </data>
   <data name="pipeline_path_browser" xml:space="preserve">
     <value>Please choose the pipeline scripts location below.</value>
@@ -1124,8 +1125,9 @@ Error text: {1}</value>
   <data name="save_before_save_as" xml:space="preserve">
     <value>Do you want to save changes before saving project to a new location? </value>
   </data>
-  <data name="NoPrimaryExportDirectory" xml:space="preserve">
-    <value>Primary export directory not found. Please browse for primary export path or export the project to DAISY3.</value>
+  <data name="no_primary_export_directory" xml:space="preserve">
+    <value>The primary export directory for this project was not found. Please select an export path or export the project to DAISY3.</value>
+    <comment>Pipeline interface error message</comment>
   </data>
   <data name="section_unexported" xml:space="preserve">
     <value>Section "{0}" has no audio content and will not be exported, nor will any of its subsections. Do you want to continue?</value>
