--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -263,7 +263,7 @@ Oh well.</value>
     <comment>Information dialog</comment>
   </data>
   <data name="title_bar" xml:space="preserve">
-    <value>{0}{1} - {2}</value>
+    <value>{0}{1} ({2}) - {3}</value>
     <comment>Title bar</comment>
   </data>
   <data name="export_choose_folder" xml:space="preserve">
