--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -1256,4 +1256,12 @@ Error text: {1}</value>
   <data name="InvalidPaths" xml:space="preserve">
     <value>One or more paths are invalid!</value>
   </data>
+  <data name="project_lock_error" xml:space="preserve">
+    <value>Could not create lock file for project at "{0}": {1}</value>
+    <comment>Lock error</comment>
+  </data>
+  <data name="project_locked" xml:space="preserve">
+    <value>Project is locked, probably because there is another session of Obi with the same project open. If you are sure that there are no other sessions of Obi you can try to remove the lock file "{0}", but proceed at your own risk.</value>
+    <comment>Lock error</comment>
+  </data>
 </root>
