Fixes #266 (Silent phrase should not get deleted when we delete unused phrase.) There is now an option to delete silence phrases or not.
But there seems to be something wrong with undo in some cases; phrases are not readded in the right order?

--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -1294,4 +1294,10 @@ Error text: {1}</value>
     <value>Phrase detection in progres...</value>
     <comment>Progress dialog title</comment>
   </data>
+  <data name="delete_silence_phrases" xml:space="preserve">
+    <value>Your project has silence phrases. Do you want to delete them as well as the other unused phrases and sections?</value>
+  </data>
+  <data name="delete_silence_phrases_caption" xml:space="preserve">
+    <value>Delete silence phrases?</value>
+  </data>
 </root>
